Robot accepting IR commands from nodejs

--- a/controller/package.json
+++ b/controller/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bluetooth-serial-port": "^1.2.1"
+    "bluetooth-serial-port": "^1.2.1",
+    "keypress": "^0.2.1",
+    "prompt": "^0.2.14"
   }
 }
